--- a/auth_project/templates/users_app/base.html
+++ b/auth_project/templates/users_app/base.html
@@ -7,12 +7,12 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 </head>
 <body>
-	<nav class="navbar navbar-default navbar-static-top">
+	<nav class="navbar navbar-dark bg-dark">
 		<div class="container">
 			<ul class="nav navbar-nav">
-				<li><a class="navbar-brand" href="{% url 'index' %}">MIDAS</a></li>
-				<li><a class="navbar-link" href="{% url 'admin:index' %}">Admin</a></li>
-				<li><a class="navbar-link" href="{% url 'users_app:register' %}"></a>Register</li>
+				<li class="nav-item"><a class="nav-brand" href="{% url 'index' %}">BRAND</a></li>
+				<li class="nav-item"><a class="nav-link" href="{% url 'admin:index' %}">Admin</a></li>
+				<li class="nav-item"><a class="nav-link" href="{% url 'users_app:register' %}"></a>Register</li>
 			</ul>
 			
 		</div>
