--- a/auth_project/templates/users_app/base.html
+++ b/auth_project/templates/users_app/base.html
@@ -12,7 +12,7 @@
 			<ul class="nav navbar-nav">
 				<li class="nav-item"><a class="nav-brand" href="{% url 'index' %}">BRAND</a></li>
 				<li class="nav-item"><a class="nav-link" href="{% url 'admin:index' %}">Admin</a></li>
-				<li class="nav-item"><a class="nav-link" href="{% url 'users_app:register' %}"></a>Register</li>
+				<li class="nav-item"><a class="nav-link" href="{% url 'users_app:register' %}">Register</a></li>
 			</ul>
 			
 		</div>
